# tiny-cpp-perf-stats

./: .clang-tidy  .gitignore  CMakeLists.txt  Event.cpp  Histogram.h  KahanSum.h  LICENSE  MMapFile.cpp  PerfCounter.cpp  PerfCounter.h  README.md  Snapshot.cpp  Snapshot.h  TimingHelpers.h  cachevec.cpp  memorymap.cpp  testCacheSize.cpp  testCacheVec.cpp  testMemoryMap.cpp
apps/: CMakeLists.txt  testMicroStats.cpp
apps/cache/: Allocators.h  BitUtils.h  CMakeLists.txt  testBits.cpp  testCacheSize.cpp  testTickerLookup.cpp  testWordMap.cpp
apps/duffloop/: CMakeLists.txt  testDuffLoop.cpp
apps/memorymap/: CMakeLists.txt  testMemoryMap.cpp
apps/scheduler/: CMakeLists.txt  Event.h  SchedulerMultimap.h  testScheduler.cpp
cmake/: FindLibpfm.cmake
datasets/: Bats_Volume_2016-05-03.csv
libs/: CMakeLists.txt  Counter.h  CpuUtils.cpp  CpuUtils.h  Datasets.h  DateUtils.h  Histogram.h  IndexedMap.h  KahanSum.h  MicroStats.h  PerfCounter.cpp  PerfCounter.h  PerfGroup.cpp  PerfGroup.h  PerfUtils.cpp  PerfUtils.h  Product.h  Regression.cpp  Regression.h  Snapshot.cpp  Snapshot.h  StringUtils.h  TimingHelpers.h  TimingUtils.h
libs/datasets/: CMakeLists.txt  bats.cpp
tests/: CMakeLists.txt
tests/cache/: CMakeLists.txt  Ticker.h  testCacheSize.cpp  testTickerLookup.cpp  testWordMap.cpp
tests/duffloop/: CMakeLists.txt  testDuffLoop.cpp
tests/jitter/: CMakeLists.txt  jitter.cpp
tests/memorymap/: CMakeLists.txt  MMapFile.cpp  MMapFile.h  testMemoryMap.cpp
tests/microstats/: CMakeLists.txt  testMicroStats.cpp
tests/scheduler/: CMakeLists.txt  SchedulerPriorityQueue.h  SelectiveCacheVector.h  testScheduler.cpp
